--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "a basic  app to deploy",
+  "description": "first backend project",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "node",
+    "javascript",
     "backend"
   ],
-  "author": "hitest sir",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  }
+  "author": "1VishalSD",
+  "license": "ISC"
 }
